images + colors + typo + reorganisation

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Les amis de Sainte Madeleine de la Jarrie"
+      name="Les Amis de Sainte Madeleine de La Jarrie"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
