--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -20,6 +20,7 @@
     <input name="subject" type="text" />
     <textarea name="message"></textarea>
     <input name="rgpd" type="checkbox" />
+    <div data-netlify-recaptcha="true"></div>
   </form>
   <div id="root"></div>
 </body>
