--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+  <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
     <input name="firstname" type="text" />
     <input name="lastname" type="text" />
     <input name="email" type="email" />
